--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # API Configuration
-REACT_APP_API_URL=http://localhost:5001/api
+VITE_API_BASE_URL=http://localhost:5001/api
 
 # Application
-REACT_APP_ENV=development
+VITE_APP_ENV=development
